# helpers

./: .gitignore  AGENTS.md  Git-Shell-Helpers-Installer.sh  HANDOFF-lint-cleanup.md  HANDOFF.md  Helpers-Installer.sh  Integrating-Agentic-Design-Patterns-Into-GSH-chat-history.jsonl  PATCHES.md  README.md  git-copilot-quickstart  git-cs-grade.js  git-shell-helpers-mcp.js  git-shell-helpers-mcpd.js  gsh  gsh-mcp.c  helpers  helpers-mcp.c  helpers-server  helpers-server.js  helpers-serverd.js  install-git-shell-helpers  install-helpers  package.json
.github/: COMMIT_GUIDELINES.md  DESIGN_QUICK_REFERENCE.md  UI_DESIGN_AUTHORITY_ACTIVATED.md  copilot-instructions.md  design-audit-2026-04-17.md  design-memory.md  devops-audit-community-settings.json  release-config.example.env
.github/devops-audit-community-cache/: manifest.json
.github/instructions/: javascript.instructions.md  modular-architecture.instructions.md  shell-safety.instructions.md
.github/workflows/: build-installer.yml  install-test.yml  pages-search.yml  pr-quality.yml  publish-apt.yml  test.yml
.gsh/tools/: .post-reload-signal-manual-test-continue.json  .post-reload-signal-register.json  .post-reload-signal-tool-registration-batch.json
agent-config/: CORE.md
claude-config/: CLAUDE.gsh.md  CLAUDE.helpers.md
claude-config/agents/: cs-grade-improver.md
claude-config/commands/: gsh.md  helpers.md
copilot-config/: devops-audit-community-settings.json
copilot-config/agents/: Explore.agent.md
copilot-config/devops-audit-community-cache/: manifest.json
copilot-config/instructions/: expand-and-engage.instructions.md  gsh-mcp-tools.instructions.md  gsh-routing-index.instructions.md  helpers-mcp-tools.instructions.md  helpers-routing-index.instructions.md  request-preparse.instructions.md  self-maintaining-context.instructions.md  session-learning.instructions.md  shell-scripts.instructions.md  software-design.instructions.md
corpus/: language-csharp.md
cs-grade/src/: lang.rs  lib.rs  main.rs  project.rs  report.rs  scoring.rs  signals.rs
cs-grade/tests/: integration.rs
extraDocs/: data-structures-algorithms.md  lint-corpus.jsonl  manifest.json  software-design.md  software-principles.md
knowledge/: agentic-design-patterns-coding-agents.md  architecture-gsh-internals.md  architecture-gsh-user-guide.md  architecture-helpers-internals.md  architecture-helpers-user-guide.md
lib/: mcp-activity-ipc.js  mcp-git.js  mcp-google-headless.js  mcp-local-subagents.js  mcp-native.js  mcp-pdf-extract.js  mcp-research-tools.js  mcp-research.js  mcp-session-memory.js  mcp-strict-lint.js  mcp-web-search.js  post-reload-chat-automation.js  quickstart-models.sh
lint-checkers/: javascript.json  python.json  rust.json
lint-index/: SCHEMA.md  clippy.json  eslint.json  pmd.json  ruff.json  sources.json  staticcheck.json
lint-models/: java.learned.json  javascript.learned.json  python.learned.json  rust.learned.json
native/: Cargo.toml
native/examples/: diag_semantic.rs  grade_semantic.rs  learn_concepts.rs  lint_project.rs  lint_with_memory.rs  measure_fast.rs  measure_moe.rs  measure_precise.rs  train_lint.rs  verify_fp.rs
native/src/: cli.rs  doc_crawler.rs  embed.rs  git.rs  lib.rs  lint_ai.rs  lint_ast.rs  lint_brain.rs  lint_checkers.rs  lint_concept.rs  lint_docs.rs  lint_graph.rs  lint_match.rs  lint_moe.rs  lint_practice.rs  lint_semantic.rs  lint_sig.rs  lint_train.rs  linter.rs  main.rs  mcp.rs  model_utils.rs  proc.rs  proto.rs  registry.rs  tfidf.rs  util.rs
native/src/gitcli/: checkpoint.rs  cs_grade.rs  fucked_push.rs  get.rs  initialize.rs  mod.rs  pushed_env.rs  remerge.rs  resolve.rs  scan_envs.rs  upload.rs
native/src/index/: build.rs  bundle.rs  dx.rs  lang.rs  mod.rs  model.rs  rank.rs  store.rs  walk.rs
native/src/knowledge/: community.rs  index.rs  mod.rs  notes.rs
native/src/memory/: README.md  audit.rs  compactor.rs  concept_index.rs  controller.rs  embed.rs  gpu.rs  mod.rs  model.rs  output_streamer.rs  recall_gate.rs  retriever.rs  store.rs  types.rs  util.rs  working_set.rs
native/src/tools/: checkpoint.rs  cs_lint.rs  knowledge.rs  lint.rs  lint_source.rs  lint_web.rs  mod.rs  project_index.rs  project_tools.rs  setup.rs  strict_lint.rs  web.rs
native/src/tools/strict_lint/: parsers.rs  runners.rs
native/tests/: bundle_roundtrip.rs  checkpoint.rs  index_build.rs  knowledge.rs  memory_invariants.rs
pages/: index.html
pages/assets/: app.js  neural.js  styles.css
pages/data/: notes-search.json
proposals/: 001-suppress-folder-switch-dialog.md  002-git-head-label-override.md  003-chat-session-focus-stable.md  OBSOLESCENCE-STRATEGY.md  README.md
release-notes/: v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.4.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.8.md  v0.4.9.md  v0.5.0.md  v0.5.2.md  v0.5.4.md  v0.5.5.md  v0.5.6.md  v0.5.7.md
scripts/: build-apt-repo.sh  build-aur-package.sh  build-deb.sh  build-dist.sh  build-docs-corpus.mjs  build-homebrew-core-formula.sh  build-homebrew-formula.sh  build-knowledge-index.js  build-lint-index.mjs  build-native-binaries.sh  build-npm-package.sh  build-pages-search-site.js  build-pkg-manifests.sh  build-pkg.sh  build-vsix.sh  capture-live-site-browser-flows.js  community-cache-pull.sh  community-cache-submit.sh  community-research-submit.sh  crawl-docs.mjs  fetch-prebuilt.sh  gen-lint-checkers.mjs  lint-index-pull.sh  lint-index-submit.sh  package-manifest.sh  patch-vscode-apply-all.js  patch-vscode-argv.js  patch-vscode-folder-switch.js  patch-vscode-git-head-display.js  patch-vscode-runsubagent-model.js  scrape-singlepage-examples.mjs  setup-github-release-config.sh  test-git-upload-states.sh  test-gitcli.sh  test-google-challenge-sharing.js  test-install-health.js  test-mcp-roots-workspace.js  test-mcp-tool-docs.js  test-mcp-tools-blackbox.js  test-patch-vscode-argv.js  (+6 more)
vision-tool/: gsh-vision-tool-0.0.1.vsix  screenshot.js
vscode-extension/: README.md  extension.js  package-lock.json  package.json
(+44 files in other folders)
