[package]
name = "gsh-native"
version = "0.3.8"
edition = "2021"
rust-version = "1.74"
description = "Native Rust implementations of the hot Git Shell Helpers MCP tools."
license = "MIT"
repository = "https://github.com/RockyWearsAHat/github-shell-helpers"

# One multiplexed binary the Node MCP daemon shells out to:
#   gsh-native schemas        -> JSON array of native tool schemas
#   gsh-native call <tool>    -> reads {args} JSON on stdin, prints MCP content
[[bin]]
name = "gsh-native"
path = "src/main.rs"

[lib]
name = "gsh_native"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object key order stable so on-disk indexes (and the
# community-index contract) match the original JavaScript JSON.stringify output.
serde_json = { version = "1", features = ["preserve_order"] }
regex = "1"
# Timestamps that match JavaScript's Date.toISOString() exactly (UTC, millis, Z).
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Bounded waits so strict_lint never hangs on a slow linter subprocess.
wait-timeout = "0.2"

# Project indexer: gitignore-aware walk + tree-sitter symbol/reference tags.
ignore = "0.4"
tree-sitter = "0.25"
tree-sitter-tags = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
